--- a/src/jaybenne/jaybenne_config.hpp.in
+++ b/src/jaybenne/jaybenne_config.hpp.in
@@ -22,6 +22,8 @@
 using @JAYBENNE_EOS_TYPE@;
 using @JAYBENNE_ABSORPTION_OPACITY_TYPE@;
 using @JAYBENNE_SCATTERING_OPACITY_TYPE@;
+using @JAYBENNE_ABSORPTION_MEAN_OPACITY_TYPE@;
+using @JAYBENNE_SCATTERING_MEAN_OPACITY_TYPE@;
 
 #include "@JAYBENNE_HOST_VARIABLE_HEADER@"
 
