Fixing little errors

--- a/inputs/inf.in
+++ b/inputs/inf.in
@@ -58,6 +58,7 @@ source_strategy = uniform
 seed = 349857
 
 <mcblock>
+frequency_type = gray
 opacity_model = constant
 opacity_constant_value = 1.0 # cm^2/g
 scattering_model = constant
