--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,9 +132,9 @@ jobs:
                             --input ../inputs/stepdiff_smr_ddmc.in --use_mpiexec
           ./stepdiff_smr.py --executable $JAYBENNE_EXECUTABLE \
                             --input ../inputs/stepdiff_smr_ddmc.in --use_mpiexec \
-                            --mpi_nthreads 8 --oversubscribe
+                            --mpi_nthreads 8 --mpi_oversubscribe
           ./stepdiff_smr.py --executable $JAYBENNE_EXECUTABLE \
                             --input ../inputs/stepdiff_smr_hybrid.in --use_mpiexec
           ./stepdiff_smr.py --executable $JAYBENNE_EXECUTABLE \
                             --input ../inputs/stepdiff_smr_hybrid.in --use_mpiexec \
-                            --mpi_nthreads 8 --oversubscribe
+                            --mpi_nthreads 8 --mpi_oversubscribe
