--- a/inputs/inf_mg.in
+++ b/inputs/inf_mg.in
@@ -23,48 +23,42 @@ x1max = 0.5
 ix1_bc = periodic
 ox1_bc = periodic
 
-nx2 = 4
+nx2 = 1
 x2min = -0.5
 x2max = 0.5
 ix2_bc = periodic
 ox2_bc = periodic
 
-nx3 = 4
+nx3 = 1
 x3min = -0.5
 x3max = 0.5
 ix3_bc = periodic
 ox3_bc = periodic
-
-# Uncomment to enable multiple meshblocks
-#<parthenon/meshblock>
-#nx1 = 4
-#nx2 = 1
-#nx3 = 1
 
 <parthenon/time>
 tlim = 1.e-10
 integrator = rk1
 
 <jaybenne>
-num_particles = 200
-dt = 1.e-12
-numin = 1.e10
-numax = 1.e20
+num_particles = 1600
+dt = 1.e-11
+n_nubins = 16
+numin = 1.e11
+numax = 1.e16
 do_emission = true
 do_feedback = false
 transport_model = zone_size
 tracking_algo = history # event
 source_strategy = uniform
-seed = 349857
+seed = 349851
 
 <mcblock>
-frequency_type = gray
-opacity_model = constant
-opacity_constant_value = 1.0 # cm^2/g
+frequency_type = multigroup
+opacity_model = ep_bremss
 scattering_model = constant
-scattering_constant_value = 1.0e5
+scattering_constant_value = 1e-1
 specific_heat = 1.0e8 # erg/K/g
-initial_density = 1.0 # g cm^-3
+initial_density = 1.0e-5 # g cm^-3
 initial_temperature = 1.0e5 # K
 initial_radiation = thermal
 
