--- a/inputs/inf_stiff.in
+++ b/inputs/inf_stiff.in
@@ -60,7 +60,7 @@ scattering_model = constant
 scattering_constant_value = 0.0 #1.0e5
 specific_heat = 1.0e7 # erg/K/g
 initial_density = 1.0 # g cm^-3
-initial_temperature = 1.0 # keV
+initial_temperature = 1.0e5 # K
 initial_radiation = thermal
 
 <parthenon/output0>
